# schat

./: .cproject  .project  CMakeLists.txt  SChat.cpp  config.h.in  config.json
src/: Config.cpp  SChat.cpp  Session.cpp
src/include/: Config.h  Session.h
